fixed the icon spacing

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -66,7 +66,8 @@ body {
           display: inline-block;
           transition: opacity 0.3s cubic-bezier(0.77, 0, 0.175, 1), transform 0.3s cubic-bezier(0.77, 0, 0.175, 1);
           transform: translateY(0);
-          margin: 0 0.3rem;
+          padding: 0 0.2rem;
+          margin: 0 0.1rem;
   
           i {
             font-size: 1.5rem;
